Added git ignore file. Fixed responsiveness issue by imposing min-width on individual panel

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -113,6 +113,7 @@ main {
   grid-gap: 1rem;
   grid-template-columns: repeat(3, 1fr);
   .item {
+    min-width: 252px;
     position: relative;
     min-height: 200px;
     margin-bottom: 100px;
@@ -146,7 +147,7 @@ main {
     }
   }
   .item-note {
-    // color: lighten($complementary-color, 20);
+    font-size: 1rem;
     color: white;
     padding: 0.5rem;
     height: 15rem;
