--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -36,13 +36,13 @@ $background-opacity: 0.9;
 }
 
 @mixin mediaSm {
-  @media screen and (max-width: 500px) {
+  @media screen and (max-width: 500px) and (orientation: portrait) {
     @content;
   }
 }
 
 @mixin mediaMd {
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 768px) and (orientation: portrait) {
     @content;
   }
 }
