--- a/scss/main.scss
+++ b/scss/main.scss
@@ -194,6 +194,7 @@ main {
   text-align: center;
   padding: 0.5rem 0.5rem;
   margin: 1rem 1rem;
+  margin-bottom: 0.5rem;
   border: 0;
   border-radius: 20px;
   &:hover {
